--- a/DarkTheme/gradle/wrapper/gradle-wrapper.properties
+++ b/DarkTheme/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Oct 27 06:37:57 AM EDT 2025
+#Sat Nov  8 06:31:16 AM EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-9.1.0-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-9.2.0-all.zip
