--- a/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Oct 28 04:02:57 EDT 2025
+#Mon Nov 10 03:11:10 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl= https\://services.gradle.org/distributions/gradle-9.1.0-all.zip
+distributionUrl= https\://services.gradle.org/distributions/gradle-9.2.0-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
