--- a/WindowManager/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowManager/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Nov 10 03:23:12 EST 2025
+#Fri Nov 21 07:31:52 AM EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl= https\://services.gradle.org/distributions/gradle-9.2.0-all.zip
