--- a/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Nov 30 04:12:53 EST 2025
+#Tue Dec  9 03:59:31 AM EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
