--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Dec  8 08:01:43 AM EST 2025
+#Wed Dec 10 23:07:24 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
