--- a/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Dec  9 03:27:43 AM EST 2025
+#Thu Dec 11 00:40:14 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
