--- a/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Dec  4 03:19:28 AM EST 2025
+#Thu Dec 11 04:17:38 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl= https\://services.gradle.org/distributions/gradle-9.2.1-all.zip
