--- a/DarkTheme/gradle/wrapper/gradle-wrapper.properties
+++ b/DarkTheme/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Dec 15 06:51:03 AM EST 2025
+#Wed Dec 17 22:55:33 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
