--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Dec 17 21:57:48 EST 2025
+#Tue Dec 23 06:49:08 AM EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
