--- a/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFontsKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Dec 17 23:55:28 EST 2025
+#Tue Dec 23 07:33:50 AM EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
