--- a/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
+++ b/AppShortcuts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Dec 23 06:53:04 AM EST 2025
+#Sat Dec 27 04:34:13 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
