--- a/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue Dec 23 22:10:13 EST 2025
+#Sat Dec 27 06:47:58 AM EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
