--- a/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Dec 27 06:50:18 AM EST 2025
+#Wed Dec 31 02:41:21 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
