--- a/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Dec 27 07:00:22 AM EST 2025
+#Wed Dec 31 03:33:58 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
